# RubiksCubeSimulation

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: anim_function.rs  cube.rs  cube_colors.rs  keyframe.rs  lib.rs  rubiks_cube.rs
crates/web/: Cargo.toml  build_and_run.bat
crates/web/pkg/: index.html
crates/web/src/: lib.rs
src/: consts.rs  main.rs  rubiks_action.rs  rubiks_cube.rs  simulation.rs  utils.rs
