[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Rubiks Cube Simulation written in rust with three-d"
repository = "https://github.com/kerrytazi/rubiks_cube_simulation"
license = "MIT"

[workspace]
resolver = "3"
members = [
	"crates/simulation",
	"crates/app",
	"crates/web",
]
