[package]
name = "web"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
simulation = { path = "../simulation" }
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
panic = "unwind"
